--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=459eface79bd69583bfd016dbda415c9">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=cb5365762222b093e772d67ba546b4d8">
     <title>Lecture Template</title>
 </head>
 
@@ -16,7 +16,8 @@
 
     <section id="section-1" class="container-grid">
         <div class="grid-content">
-            <h1>Web 2 - HTML Base Template</h1>
+            <h1>Paradise Beaches and Islands</h1>
+            <h2>Philippines is one of the largest island groups in the world with 7,107 islands.</h2>
         </div>
     </section>
     <section id="section-2" class="container-grid">
@@ -33,11 +34,11 @@
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=609353731"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610138944"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=609353731"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610138944"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=609353731"></script>
+    <script src="js/scripts-min.js?ckcachebust=610138944"></script>
 </body>
 
 </html>
