--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,16 +8,19 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=cb5365762222b093e772d67ba546b4d8">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=5bee6ce087645dd726038a398b010d1d">
     <title>Lecture Template</title>
 </head>
 
 <body>
 
-    <section id="section-1" class="container-grid">
-        <div class="grid-content">
-            <h1>Paradise Beaches and Islands</h1>
-            <h2>Philippines is one of the largest island groups in the world with 7,107 islands.</h2>
+    <section id="section-1"
+        <div></section>
+            <article id="section-1-first">
+                <div>
+                    <img src="img/section-1/boats.jpg" alt="boats drone shot"
+                    <h1><span>Paradise Beaches and Islands</span></h1>
+                    <h2>Philippines is one of the largest island groups in the world with 7,107 islands.</h2>
         </div>
     </section>
     <section id="section-2" class="container-grid">
@@ -34,11 +37,11 @@
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610138944"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610139668"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610138944"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610139668"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610138944"></script>
+    <script src="js/scripts-min.js?ckcachebust=610139668"></script>
 </body>
 
 </html>
