--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=5bee6ce087645dd726038a398b010d1d">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=b08583554e7303bf9ec8a2ad430fa199">
     <title>Lecture Template</title>
 </head>
 
@@ -19,10 +19,15 @@
             <article id="section-1-first">
                 <div>
                     <img src="img/section-1/boats.jpg" alt="boats drone shot"
-                    <h1><span>Paradise Beaches and Islands</span></h1>
-                    <h2>Philippines is one of the largest island groups in the world with 7,107 islands.</h2>
+                    <h1>Paradise Beaches and Islands</h1>
         </div>
-    </section>
+    </article>
+    
+    <article id="section-1-content">
+        <div>
+            <p>Philippines is one of the largest island groups in the world with 7,107 islands.</p>
+        </div>    
+    </article>
     <section id="section-2" class="container-grid">
             <div class="grid-content">
             </div>
@@ -37,11 +42,11 @@
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610139668"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610139956"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610139668"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610139956"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610139668"></script>
+    <script src="js/scripts-min.js?ckcachebust=610139956"></script>
 </body>
 
 </html>
