--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,18 +8,18 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=3a215cc75d197f953717811823b5816a">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=89abaa3c8fbf7fe331099f6cf267ac6e">
     <title>Lecture Template</title>
 </head>
 
 <body>
 
     <section id="section-1"
-        <div></section>
+        <div>
             <article id="section-1-first">
                 <div>
                     <img src="img/section-1/boats.jpg" alt="boats drone shot"
-                    <h1>Paradise Beaches and Islands</h1>
+                    <h1><span>Paradise Beaches and Islands</span></h1>
         </div>
     </article>
     
@@ -31,6 +31,11 @@
     <section id="section-2" class="container-grid">
             <div class="grid-content">
             </div>
+                <article id="section-2-first">
+                    <div>
+                        <img src="img/section-2/tinik.jpg" alt="dancing people">
+                        <h1>It's not hard to find your dream beach or a pristine island</h1>
+                    </div>
         </section>
     <section id="section-3" class="container-grid">
                 <div class="grid-content">
@@ -42,11 +47,11 @@
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610141113"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610141503"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610141113"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610141503"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610141113"></script>
+    <script src="js/scripts-min.js?ckcachebust=610141503"></script>
 </body>
 
 </html>
