--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=89abaa3c8fbf7fe331099f6cf267ac6e">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=077bc2d47db71318e41a98eb2647e765">
     <title>Lecture Template</title>
 </head>
 
@@ -19,27 +19,35 @@
             <article id="section-1-first">
                 <div>
                     <img src="img/section-1/boats.jpg" alt="boats drone shot"
-                    <h1><span>Paradise Beaches and Islands</span></h1>
-        </div>
-    </article>
+                    <h1>Paradise Beaches and Islands</h1>
+                </div>
+            </article>
     
-    <article id="section-1-content">
-        <div>
-            <p>Philippines is one of the largest island groups in the world with 7,107 islands.</p>
-        </div>    
-    </article>
+            <article id="section-1-content">
+                 <div>
+                     <p>Philippines is one of the largest island groups in the world with 7,107 islands.</p>
+                </div>    
+            </article>
     <section id="section-2" class="container-grid">
             <div class="grid-content">
             </div>
                 <article id="section-2-first">
                     <div>
                         <img src="img/section-2/tinik.jpg" alt="dancing people">
-                        <h1>It's not hard to find your dream beach or a pristine island</h1>
-                    </div>
+                    </div>     
         </section>
     <section id="section-3" class="container-grid">
                 <div class="grid-content">
                 </div>
+                    <article id="section-3-first">
+                        <div>
+                            <h1>It's not hard to find your dream beach or a pristine island.</h1>
+                        </div>
+                <ul>
+                    <li id="gallery-1"><img src="img/section-3/jeep.jpg" alt="jeep on the beach"></li>
+                    <li id="gallery-2"><img src="img/section-3/drone.jpg" alt="beach drone shot"></li>    
+                    <li id="gallery-3"><img src="img/section-3/boy.jpg" alt="boy sitting on boat"></li
+                </ul>            
             </section>
     <section id="section-4" class="container-grid">
                     <div class="grid-content">
@@ -47,11 +55,11 @@
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610141503"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610143618"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610141503"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610143618"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610141503"></script>
+    <script src="js/scripts-min.js?ckcachebust=610143618"></script>
 </body>
 
 </html>
