--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=077bc2d47db71318e41a98eb2647e765">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=ec263a6146e3de9b4c3ff931a306004c">
     <title>Lecture Template</title>
 </head>
 
@@ -16,18 +16,19 @@
 
     <section id="section-1"
         <div>
-            <article id="section-1-first">
+            <article id="section-2-first>"
                 <div>
                     <img src="img/section-1/boats.jpg" alt="boats drone shot"
                     <h1>Paradise Beaches and Islands</h1>
-                </div>
-            </article>
+                </div>    
+                </article>
     
             <article id="section-1-content">
                  <div>
-                     <p>Philippines is one of the largest island groups in the world with 7,107 islands.</p>
+                     <h1>Philippines is one of the largest island groups in the world with 7,107 islands.</h1>
                 </div>    
             </article>
+     </section>       
     <section id="section-2" class="container-grid">
             <div class="grid-content">
             </div>
@@ -52,14 +53,25 @@
     <section id="section-4" class="container-grid">
                     <div class="grid-content">
                     </div>
+                    <article id="section-2-first">
+                        <div>
+                            <img src="img/section-4/kids.jpg" alt="laughing children">
+                        </div>    
+                    </article>
+                    
+                    <article id="section-4-middle">
+                        <div>
+                            <p><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!</p></Visiting>
+                        </div>
+                    </article>
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610143618"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610145727"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610143618"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610145727"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610143618"></script>
+    <script src="js/scripts-min.js?ckcachebust=610145727"></script>
 </body>
 
 </html>
