--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=a8dc5e4f6892090919f0e02850fb2cf8">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=06b2e60eb8bfd6738e7c765612542218">
     <title>Lecture Template</title>
 </head>
 
@@ -61,17 +61,17 @@
                     
                     <article id="section-4-middle">
                         <div>
-                            <p><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!</p></Visiting>
+                            <h1><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!</h1>
                         </div>
                     </article>
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610146029"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610151869"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610146029"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610151869"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610146029"></script>
+    <script src="js/scripts-min.js?ckcachebust=610151869"></script>
 </body>
 
 </html>
