--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,20 +8,20 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=06b2e60eb8bfd6738e7c765612542218">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=3e5bc43daa6987cafac37705d7d568f5">
     <title>Lecture Template</title>
 </head>
 
 <body>
 
     <section id="section-1"
-        <div>  
-            <article id="section-2-first>"
-                <div>
+    ><div>  
+        ><h2> id="section-2-first>"></h2>
+    </div>    
+                ><div>
                     <img src="img/section-1/boats.jpg" alt="boats drone shot"
-                    <h1>Paradise Beaches and Islands</h1>
+                    ><h1>Paradise Beaches and Islands</h1>
                 </div>    
-                </article>
     
             <article id="section-1-content">
                  <div>
@@ -44,10 +44,11 @@
                         <div>
                             <h1>It's not hard to find your dream beach or a pristine island.</h1>
                         </div>
+                    </article>
                 <ul>
                     <li id="gallery-1"><img src="img/section-3/jeep.jpg" alt="jeep on the beach"></li>
                     <li id="gallery-2"><img src="img/section-3/drone.jpg" alt="beach drone shot"></li>    
-                    <li id="gallery-3"><img src="img/section-3/boy.jpg" alt="boy sitting on boat"></li
+                    <li id="gallery-3"><img src="img/section-3/boy.jpg" alt="boy sitting on boat"></li>
                 </ul>            
             </section>
     <section id="section-4" class="container-grid">
@@ -61,17 +62,17 @@
                     
                     <article id="section-4-middle">
                         <div>
-                            <h1><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!</h1>
+                            <h1><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!></Visiting></h1>
                         </div>
                     </article>
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610151869"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610226705"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610151869"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610226705"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610151869"></script>
+    <script src="js/scripts-min.js?ckcachebust=610226705"></script>
 </body>
 
 </html>
