--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,27 +8,28 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=3e5bc43daa6987cafac37705d7d568f5">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=efbff2b46d641fa3acf47295c2d1b9b3">
     <title>Lecture Template</title>
 </head>
 
 <body>
 
-    <section id="section-1"
-    ><div>  
-        ><h2> id="section-2-first>"></h2>
-    </div>    
-                ><div>
-                    <img src="img/section-1/boats.jpg" alt="boats drone shot"
-                    ><h1>Paradise Beaches and Islands</h1>
-                </div>    
+    <section id="section-1" class="container-grid">
+        <div class="grid-content">
+        </div>  
+            <article id="section-1-first>">
+                <div>    
+                    <img src="img/section-1/boats.jpg" alt="boats drone shot">
+                    ><h1>Paradise Beaches and Islands</h1>  
+                </div>   
+            </article>
     
             <article id="section-1-content">
                  <div>
                      <h1>Philippines is one of the largest island groups in the world with 7,107 islands.</h1>
                 </div>    
             </article>
-     </section>       
+     </section> 
     <section id="section-2" class="container-grid">
             <div class="grid-content">
             </div>
@@ -62,17 +63,18 @@
                     
                     <article id="section-4-middle">
                         <div>
-                            <h1><Visiting the Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it's a cheap country to travel, you'll get a great value for your money. Don't miss out on such an amazing country!! In my opinion, Philippines is better than all of these countries together. And I tell you why!></Visiting></h1>
+                            <p>Visitingthe Philippines is big fun. Perfect beaches. Friendly locals. Beautiful nature. Plus, it isa cheap country to travel, you will get agreat value for your money. Do not miss out on such an amazing country! In my opinion, Philippinesisbetter than all of these countries together.
+                            </p>
                         </div>
                     </article>
                 </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610226705"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610228060"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610226705"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610228060"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610226705"></script>
+    <script src="js/scripts-min.js?ckcachebust=610228060"></script>
 </body>
 
 </html>
