--- a/dev/header.html
+++ b/dev/header.html
@@ -2,4 +2,7 @@
     <div>
         <h1><span>IT'S MORE FUN IN THE PHILIPPINES!</span></h1>
     </div>
+    <div>
+        <img src="img/header/sun.jpg" alt="sunset hero image">
+    </div>
 </header>
