--- a/deploy/index.html
+++ b/deploy/index.html
@@ -43,7 +43,8 @@
                     <article id="section-2-first">
                         <div>
                             <img src="img/section-2/tinik.jpg" alt="dancing people">
-                        </div>     
+                        </div>
+                    </article>         
             </section>
     <section id="section-3" class="container-grid">
                     <div class="grid-content">
