trying css again

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/styles.css?ckcachebust=99e5380a25e76406bd4d2f2e2e434f21">
+    <link rel="stylesheet" href="css/styles.css?ckcachebust=aa7fe8fe72851caa138a4e39d1cdd111">
     <title>Lecture Template</title>
 </head>
 
@@ -21,15 +21,17 @@
             <img src="img/header/sun.jpg" alt="sunset hero image">
         </div>
     </header>
-    <section id="section-1" class="container-grid">
-            <div class="grid-content">
+    <section id="section-1">
+            <div id="section-1-container">
             </div>  
-                <article id="section-1-first>">
-                    <div>    
+                <section>
+                    <div id="section-1-first>">
+                        <hr>    
                         <img src="img/section-1/boats.jpg" alt="boats drone shot">
-                        ><h1>Paradise Beaches and Islands</h1>  
+                        ><h1>Paradise Beaches and Islands</h1>
+                        <hr>  
                     </div>   
-                </article>
+                </section>
         
                 <article id="section-1-content">
                      <div>
@@ -43,8 +45,7 @@
                     <article id="section-2-first">
                         <div>
                             <img src="img/section-2/tinik.jpg" alt="dancing people">
-                        </div>
-                    </article>         
+                        </div>     
             </section>
     <section id="section-3" class="container-grid">
                     <div class="grid-content">
@@ -78,11 +79,11 @@
                     </section>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610315433"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js?ckcachebust=610406301"></script>
     <!-- Greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610315433"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js?ckcachebust=610406301"></script>
 
-    <script src="js/scripts-min.js?ckcachebust=610315433"></script>
+    <script src="js/scripts-min.js?ckcachebust=610406301"></script>
 </body>
 
 </html>
