--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <section id="section-1"
+    ><section id="section-1"
     ><h1>IT'S MORE FUN IN THE PHILIPPINES!</h1>
     </section>
-    <section id="section-2">
+    ><section id="section-2">
         <div id="section-2-container"> 
             <section>
                 <div id="section-2-content>">
@@ -30,22 +30,22 @@
             <aside></aside>
         </div>
      </section> 
-     <section id="section-3"></section>
-     <section id="section-4"
+     ><section id="section-3"></section>
+     ><section id="section-4"
      ><div>
          <hr>
          <h1>It's not hard to find your dream beach or a pristine island.</h1>
          <hr>
      </div>
     </section>
-    <section id="section-5">
+    ><section id="section-5">
         <ul>
             <li id="boy"></li>
             <li id="drone"></li>
             <li id="jeep"></li>
         </ul>
     </section>
-    <section id="section-6">
+    ><section id="section-6">
         <div>
             <aside>
                 <img src="img/section-6/kids.jpg" alt="image of laughing kids">
@@ -57,6 +57,11 @@
             </section>
         </div>
     </section>
+    ><footer>
+        <div>
+            ><img src="img/footer/sun.png" alt="philippine star">
+        </div>
+    </footer>
 
 
 
