--- a/dev/index.html
+++ b/dev/index.html
@@ -6,13 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Google Font -->
-     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+     <!-- Font Awesome -->
+     <script src="https://kit.fontawesome.com/3c79b583ac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <title>Lecture Template</title>
+    <title>It's More Fun In The Philippines</title>
 </head>
 
 <body>
+    ><header>
+        <div>
+            <section id="burger-container">
+                    <i class="fas fa-bars" id="burger-icon"></i>
+            </section>
+    
+            <nav id="nav-container" data-nav="main-navigation">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Learn More</a></li>
+                    <li><a href="#">Book Now!</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     ><section id="section-1"
         ><h1>IT'S MORE FUN IN THE PHILIPPINES!</h1>
     </section>
